package com.restaurante;

import com.restaurante.fabrica.EventoFactory;
import com.restaurante.fabrica.EventoFactoryProducer;
import com.restaurante.dao.EventosDAO;
import com.restaurante.dto.TipoPrecioDTO;
import com.restaurante.dto.PrecioDTO;
import com.restaurante.dto.ReservacionConBoletosDTO;
import com.restaurante.dto.EventoDTO;
import com.restaurante.dto.DatosDTO;
import com.restaurante.dto.ReservacionDTO;
import com.restaurante.dto.ClienteDTO;
import com.restaurante.dto.EditarEventoDTO;
import com.fasterxml.jackson.core.JsonProcessingException;
import com.fasterxml.jackson.databind.ObjectMapper;
import io.javalin.http.Context;
import java.sql.Date;
import java.sql.SQLException;
import java.time.LocalDate;
import java.util.ArrayList;
import java.util.HashMap;
import java.util.List;
import java.util.Map;
import java.util.logging.Level;
import java.util.logging.Logger;

/**
 *
 * @author Avalos Albino Aldair Oswaldo 2222005685
 */
public class Server {

  public static EventosDAO eventosDAO = new EventosDAO();

  public Server() {
  }

  public static void listadoDeEventos(Context ctx) {
    try {
      List<Evento> eventos = eventosDAO.getAllEventos();
      ctx.json(eventos);
    } catch (SQLException ex) {
      ctx.status(500).result("Error interno del servidor al obtener el listado de eventos");
    }
  }

  public static void evento(Context ctx) {
    try {
      List<Evento> eventos = eventosDAO.getEventos();
      ctx.json(eventos);
    } catch (SQLException ex) {
      ctx.status(500).result("Error interno del servidor al obtener el evento");
    }
    ctx.result("NO IMPLEMENTADO");
  }

  public static void eventoPorNombre(Context ctx) {
    String nombre = ctx.pathParam("nombre");

    try {
      Evento evento = eventosDAO.getEventoPorNombre(nombre);
      if (evento == null) {
        ctx.status(400).result("Evento no encontrado");
      } else {
        ctx.json(evento);
      }
    } catch (SQLException ex) {
      Logger.getLogger(Server.class.getName()).log(Level.SEVERE, null, ex);
      ctx.status(500).result("Error interno del servidor al consultar el evento");
    }
  }

  public static void estadoSillas(Context ctx) {
    int idEvento = Integer.parseInt(ctx.pathParam("idEvento"));
    try {
      List<EstadoSillas> estadoSillas = eventosDAO.getEstadoSillas(idEvento);
      ctx.json(estadoSillas);
    } catch (SQLException ex) {
      ctx.status(500).result("Error interno del servidor al obtener el listado de eventos");
    }
  }

  public static void crearEvento(Context ctx) {
    EventoDTO dto = ctx.bodyAsClass(EventoDTO.class);
    System.out.println(dto);
    String nombre = dto.getNombre();
    String tipo = dto.getTipo();
    LocalDate fecha = dto.getFecha();
    PrecioDTO precio = dto.getPrecio();

    try {
        EventoFactoryProducer producer = new EventoFactoryProducer(eventosDAO);
        EventoFactory factory = producer.getFactory(tipo);
        boolean eventoCreado = factory.crearEvento(nombre, tipo, fecha, precio);
        
        if (!eventoCreado) {
            ctx.status(500).result("Error en el servidor");
            return;
        }
        ctx.result("Evento de " + nombre + " agregado");
    } catch (IllegalArgumentException e) {
        ctx.status(400).result("Tipo de evento no soportado: " + tipo);
    }
  }

  public static void sembrado(Context ctx) {
    String eventDataJsonString = ctx.formParam("data");
    if (eventDataJsonString != null && !eventDataJsonString.isEmpty()) {
      ObjectMapper objectMapper = new ObjectMapper();

      try {
        EventData eventData = objectMapper.readValue(eventDataJsonString, EventData.class);
        String viewName = "views/" + eventData.getTipo() + ".html";
        Map<String, Object> model = new HashMap<>();
        model.put("evento", eventData);
        ctx.render(viewName, model);
      } catch (JsonProcessingException e) {
        ctx.status(500).result("Error parsing JSON: " + e.getMessage());
      }
    } else {
      ctx.status(400).result("Data parameter is missing");
    }
  }

  public static void reservarSillas(Context ctx) {

    int idEvento = Integer.parseInt(ctx.pathParam("idEvento"));
    ReservacionDTO reservacion = ctx.bodyAsClass(ReservacionDTO.class);
    int codigo = reservacion.getCodigo();
    int mesa = reservacion.getSilla().getMesa();
    String silla = reservacion.getSilla().getSilla();
    if (silla.isBlank()) {
      ctx.status(400).json(Map.of("error", "Los parámetros mesa y silla deben ser números válidos"));
    }

    boolean isReservacion = eventosDAO.reservarSillas(codigo, mesa, idEvento, silla);
    if (!isReservacion) {
      ctx.status(400).json(Map.of("message", "No se encontró el registro con los datos proporcionados"));
    }
    ctx.status(200).json(Map.of("message", "Reserva realizada correctamente"));

  }

  public static void getPrecios(Context ctx) {
    int idEvento = Integer.parseInt(ctx.pathParam("idEvento"));
    List<TipoPrecioDTO> lista = eventosDAO.getPrecios(idEvento);
    ctx.json(lista);
  }

  public static void getDatos(Context ctx) {
    try {
      String jsonDataString = ctx.formParam("jsonData");
      ObjectMapper objectMapper = new ObjectMapper();
      DatosDTO datos = objectMapper.readValue(jsonDataString, DatosDTO.class);
      Map<String, Object> modelo = new HashMap<>();
      modelo.put("sembrado", datos.getSembrado());
      modelo.put("tipo", datos.getTipo());
      modelo.put("listaMesaSilla", datos.getListaMesaSilla());
      ctx.render("views/datos.html", modelo);
    } catch (JsonProcessingException ex) {
      Logger.getLogger(Server.class.getName()).log(Level.SEVERE, null, ex);
    }
  }

  public static void getConteo(Context ctx) {
    int idEvento = Integer.parseInt(ctx.pathParam("idEvento"));
    int conteo = eventosDAO.obtenerConteo(idEvento);
    ctx.json(Map.of("conteo", conteo));
  }

  public static void postCodigo(Context ctx) {
    ClienteDTO dto = ctx.bodyAsClass(ClienteDTO.class);

    if (Double.isNaN(dto.getCodigo()) || dto.getNombreCompleto().isBlank() || dto.getTelefono().isBlank()) {
      ctx.status(400).json(Map.of("error", "Parametros invalidos"));
    }

    boolean isCodigoInserted = eventosDAO.insertarReserva(dto.getCodigo(), dto.getNombreCompleto(), dto.getTelefono());
    if (!isCodigoInserted) {
      ctx.status(404).json(Map.of("message", "No se encontró el registro con los datos proporcionados"));
    }
    ctx.status(200).json(Map.of("message", "Reserva realizada correctamente"));
  }

  public static void eliminarEvento(Context ctx) {
    int idEvento = Integer.parseInt(ctx.pathParam("idEvento"));
    boolean fueEliminado = eventosDAO.eliminarEvento(idEvento);
    if (!fueEliminado) {
      ctx.status(404).json(Map.of("message", "No se elimino ningun evento"));
    }
    ctx.status(200).json(Map.of("message", "Evento eliminado correctamente!"));
  }

  public static void editar(Context ctx) {
    int idEvento = Integer.parseInt(ctx.pathParam("idEvento"));
    List<EditarEventoDTO> lista = eventosDAO.mostrarFormularioEditar(idEvento);
    if (lista.isEmpty()) {
      ctx.status(404).result("Evento no encontrado");
    }

    EditarEventoDTO primerResultado = lista.get(0);
    String nombreEvento = primerResultado.getNombre();
    String fechaEvento = primerResultado.getFecha();
    String tipoEvento = primerResultado.getTipoEvento();
    List<TipoPrecioDTO> preciosParaVista = new ArrayList<>();
    for (EditarEventoDTO row : lista) {
      preciosParaVista.add(new TipoPrecioDTO(row.getTipoEvento(), row.getPrecio()));
    }

    Map<String, Object> model = new HashMap<>();
    model.put("idEvento", idEvento);
    model.put("nombreEvento", nombreEvento);
    model.put("fechaEvento", Date.valueOf(fechaEvento));
    model.put("precios", preciosParaVista);
    model.put("tipoEvento", tipoEvento);

    ctx.render("views/editarEvento.html", model);
  }

  public static void cambiar(Context ctx) {
    int idEvento = Integer.parseInt(ctx.pathParam("idEvento"));
    EventoDTO dto = ctx.bodyAsClass(EventoDTO.class);
    System.out.println("DTO " + dto);

    boolean actualizado = eventosDAO.actualizarEvento(dto.getNombre(), dto.getFecha(), idEvento);
    if (!actualizado) {
      System.err.println("Error al actualizar el evento");
      ctx.status(500).json(Map.of("error", "Error al actualizar los datos del evento"));
    }

    if (dto.getTipo().equals("Trova")) {
      PrecioDTO precios = dto.getPrecio();
      double vip = precios.getVIP();
      double preferente = precios.getPreferente();
      double general = precios.getGeneral();
      double laterales = precios.getLaterales();
      boolean preciosActualizados = eventosDAO.actualizarPreciosTrova(vip, preferente, general, laterales, idEvento);
      if (!preciosActualizados) {
        ctx.status(404).json(Map.of("message", "No se encontró el registro de precio para el evento"));
      }
      ctx.status(200).json(Map.of("message", "Reserva realizada correctamente"));
    } else if (dto.getTipo().equals("General")) {
      PrecioDTO precios = dto.getPrecio();
      double vip = precios.getVIP();
      double preferente = precios.getPreferente();
      double general = precios.getGeneral();
      boolean preciosActualizados = eventosDAO.actualizarPreciosGeneral(vip, preferente, general, idEvento);
      if (!preciosActualizados) {
        ctx.status(404).json(Map.of("message", "No se encontró el registro de precio para el evento"));
      }
      ctx.status(200).json(Map.of("message", "Reserva realizada correctamente"));
    } else {
      ctx.status(200).json(Map.of("message", "Evento actualizado correctamente"));
    }
  }

  public static void listarReservas(Context ctx) {
    int idEvento = Integer.parseInt(ctx.pathParam("idEvento"));
    List<ClienteDTO> listaReservas = eventosDAO.listarReservas(idEvento);
    String nombreEvento = eventosDAO.getNombreEvento(idEvento);
    if (nombreEvento.isBlank()) {
      ctx.status(404).result("Evento no encontrado");
    }
    List<ReservacionConBoletosDTO> reservaBoletos = new ArrayList<>();
    for (ClienteDTO reserva : listaReservas) {
      int boletos = eventosDAO.countBoletosForReserva(idEvento, reserva.getCodigo());
      reservaBoletos.add(new ReservacionConBoletosDTO(
              reserva.getNombreCompleto(),
              reserva.getTelefono(),
              reserva.getCodigo(),
              boletos));
    }

    Map<String, Object> model = new HashMap<>();
    model.put("reservas", reservaBoletos);
    model.put("nombreEvento", nombreEvento);

    ctx.render("views/lista.html", model);
  }
}
